[fix] bg not showing on friend page

--- a/src/nginx/html/styles/friends.css
+++ b/src/nginx/html/styles/friends.css
@@ -56,7 +56,7 @@
 	top: 0;
 	background-color: black;
 	opacity: 0.5;
-	display: none;
+	display: block;
 }
 
 .friendContainer{
